samples/_failures_safe/1761177711_385cf6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_521a93ee.c: In function ‘print_token’:
./samples/SAFE/__tmp_521a93ee.c:147:14: error: ‘TOKEN’ undeclared (first use in this function)
  147 |         case TOKEN
      |              ^~~~~
./samples/SAFE/__tmp_521a93ee.c:147:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_521a93ee.c:147:9: error: expected ‘:’ or ‘...’ at end of input
  147 |         case TOKEN
      |         ^~~~
./samples/SAFE/__tmp_521a93ee.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_521a93ee.c:147:9: error: expected declaration or statement at end of input
